# robot-fetch-me-a-beer

Detection/src/: detect.py
Manipulation/: docker_run.sh
Manipulation/devel/: .catkin  local_setup.sh
Manipulation/devel/lib/arl_manipulation_baseline/: dmp_learn.py  dmp_play.py  evaluation.py  publish_pose_from_tf.py  set_world.py  smoothness.py
Manipulation/devel/lib/pkgconfig/: arl_manipulation_baseline.pc
Manipulation/devel/lib/python3/dist-packages/arl_manipulation_baseline/: __init__.py
Manipulation/devel/share/arl_manipulation_baseline/cmake/: arl_manipulation_baselineConfig.cmake
Manipulation/src/: CMakeLists.txt  README.md  package.xml
Manipulation/src/launch/: DMP_Play.launch  record.launch  set_world.launch
Manipulation/src/scripts/: dmp_learn.py  manipulate.py  process_data.py
Manipulation/src/src/arl_manipulation_baseline/: smoothness.py
Navigation/: pose_pairs.yaml
Navigation/src/: navigate.py
Pipeline/src/: pipeline.py
