<?xml version="1.0"?>
<package format="2">
  <name>arl_manipulation_baseline</name>
  <version>0.0.0</version>
  <description>arl_manipulation_baseline</description>

   <maintainer email="johannes.heiderbserger@tuwien.ac.at">jheidersberger</maintainer>

  <license>TODO</license>

  <depend>roslaunch</depend>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>


  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>

  </export>
</package>
